it actually works now